...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margmin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margmin_normal"
        android:textColor="@color/cardview_dark_background"
...
